# sentry-enabler

./: README.md  license.txt  pyproject.toml
sentry_enabler/: __init__.py  api.py  boot.py  hooks.py  modules.txt
sentry_enabler/public/js/: sentry_frontend.js
